--- a/ArnaldoDiBianco/ArnaldoDiBianco.csproj
+++ b/ArnaldoDiBianco/ArnaldoDiBianco.csproj
@@ -4,11 +4,13 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
-    <AssemblyVersion>1.0.33.0</AssemblyVersion>
-    <FileVersion>1.0.33.0</FileVersion>
+    <AssemblyVersion>1.0.40.0</AssemblyVersion>
+    <FileVersion>1.0.40.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\Finestra1anta.png" />
+    <None Remove="Images\Finestra2ante.png" />
     <None Remove="Images\FinestraPersiana1anta.png" />
     <None Remove="Images\FinestraPersiana2ante.png" />
     <None Remove="Images\PortaBalconePersiana1anta.png" />
@@ -25,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\Finestra1anta.png" />
+    <Resource Include="Images\Finestra2ante.png" />
     <Resource Include="Images\FinestraPersiana1anta.png" />
     <Resource Include="Images\FinestraPersiana2ante.png" />
   </ItemGroup>
